--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "homepage": "https://github.com/asterics/asterics-docs#readme",
   "devDependencies": {
+    "klaw-sync": "^6.0.0",
+    "nodegit": "^0.23.0-alpha.1",
     "vuepress": "^0.14.4"
   }
 }
