--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vuepress dev intermediate",
     "build": "vuepress build intermediate",
-    "echo": "echo $FOO",
     "v": "vuepress -V"
   },
   "repository": {
@@ -31,6 +30,6 @@
     "nodegit": "^0.23.0-alpha.1",
     "ora": "^3.0.0",
     "turndown": "^5.0.1",
-    "vuepress": "^1.0.0-alpha.17"
+    "vuepress": "0.14.4"
   }
 }
