Add prebuild step, script, environment variable file, shelljs

--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
-ASTERICS_REPO = "source/asterics"
+GIT_SUBMODULE_ASTERICS="source/asterics"
+GIT_SUBMODULE_ASTERICS_REF="../AsTeRICS"
+GIT_SUBMODULE_ASTERICS_BRANCH="master"
+
+GIT_SUBMODULE_ASTERICS_WIKI="source/asterics-wiki"
+GIT_SUBMODULE_ASTERICS_WIKI_REF="../AsTeRICS.wiki"
+GIT_SUBMODULE_ASTERICS_WIKI_BRANCH="master"
 
 ACS_HELP_SRC = "Documentation/ACS-Help/HTML"
 ACS_HELP_DEST = "help"
