prebuild: add npm module asterics-web-git

--- a/.env
+++ b/.env
@@ -1,9 +1,11 @@
+# "auto:folder", "remote", "/path/to/repo"
 GIT_SUBMODULE_ASTERICS="source/asterics"
-GIT_SUBMODULE_ASTERICS_REF="../AsTeRICS"
+GIT_SUBMODULE_ASTERICS_REF="auto:AsTeRICS"
 GIT_SUBMODULE_ASTERICS_BRANCH="master"
 
+# "auto:folder", "remote", "/path/to/repo"
 GIT_SUBMODULE_ASTERICS_WIKI="source/asterics-wiki"
-GIT_SUBMODULE_ASTERICS_WIKI_REF="../AsTeRICS.wiki"
+GIT_SUBMODULE_ASTERICS_WIKI_REF="auto:AsTeRICS.wiki"
 GIT_SUBMODULE_ASTERICS_WIKI_BRANCH="master"
 
 ACS_HELP_SRC = "Documentation/ACS-Help/HTML"
