--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/asterics/asterics-docs#readme",
   "devDependencies": {
+    "asterics-web-git": "git+https://github.com/sabicalija/asterics-web-git.git#0.1.0",
     "child_process": "^1.0.2",
     "dotenv": "^6.2.0",
     "klaw-sync": "^6.0.0",
@@ -36,5 +37,6 @@
     "terminal-kit": "^1.26.8",
     "turndown": "^5.0.1",
     "vuepress": "0.14.8"
-  }
+  },
+  "dependencies": {}
 }
