--- a/config/.env
+++ b/config/.env
@@ -13,10 +13,26 @@ ACS_HELP_DEST = "help"
 ACS_HELP_FILES_EXT = "FIXME!"
 
 DOCS_PORT = 8080
-DOCS_LATEST = "v3.0.1 FIXME!"
+DOCS_LATEST = "v3.0.1"
+DOCS_ENDPOINT = ""
 DOCS_SRC = "intermediate"
 DOCS_DEST = "intermediate/.vuepress/dist"
+
+
 BUILD_DEST = "intermediate/.vuepress/intermediate_build"
 SIDEBAR_DEST = "intermediate/.vuepress/sidebar"
 
 UTIL_TIMEOUT = 5000
+
+# Deployment
+HOST="0.0.0.0"
+PORT=8080
+PREFIX=""
+ENDPOINT=""
+# Remove?
+DOCSDIR="docs"
+
+# Advanced
+DEST="dist"
+LATEST="master"
+HTML_TO_MD="docs=>documentation/one hardware/manuals=>documentation/two"
