--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 node_modules/
 */**/dist/
 .vscode/
-intermediate/.vuepress/temp/
+docs/.vuepress/temp/
 docs/help/Plugins/
 docs/help/ACS/
 docs/help/ARE/
