--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ node_modules/
 */**/dist/
 .vscode/
 docs/.vuepress/temp/
+docs/.vuepress/public/v*/
 docs/help/Plugins/
 docs/help/ACS/
 docs/help/ARE/
