--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "source/external/asterics"]
-	path = source/external/asterics
-	url = https://github.com/asterics/AsTeRICS.git
-[submodule "source/external/asterics-wiki"]
-	path = source/external/asterics-wiki
+[submodule "src/external/asterics-wiki"]
+	path = src/external/asterics-wiki
 	url = https://github.com/asterics/AsTeRICS.wiki.git
+[submodule "src/external/asterics"]
+	path = src/external/asterics
+	url = https://github.com/asterics/AsTeRICS.git
