--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "asterics-docs",
   "version": "1.0.0",
   "description": "AsTeRICS Help and Docs",
+  "engines": {
+    "node": "^10.0.0",
+    "yarn": "^1.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vuepress dev docs",
