--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@asterics/node-utils": "^0.2.0",
     "@vuepress/plugin-back-to-top": "^1.0.0-alpha.0",
     "@vuepress/plugin-medium-zoom": "^1.0.0-alpha.0",
+    "@vuepress/plugin-pwa": "^1.0.0-alpha.0",
     "convict": "^4.4.1",
     "dotenv": "^6.2.0",
     "nodegit": "^0.24.0",
