added submodule webacs

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/external/asterics"]
 	path = src/external/asterics
 	url = https://github.com/asterics/AsTeRICS.git
+[submodule "src/external/webacs"]
+	path = src/external/webacs
+	url = https://github.com/asterics/WebACS.git
