--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "setup": "node src/scripts/setup.js",
     "cli": "node src/scripts/cli.js",
     "release": "semantic-release",
-    "release:prepare": "yarn add -D semantic-release @semantic-release/npm @semantic-release/github @semantic-release/commit-analyzer @semantic-release/release-notes-generator @semantic-release/changelog"
+    "release:prepare": "yarn add -D semantic-release @semantic-release/commit-analyzer @semantic-release/changelog"
   },
   "repository": {
     "type": "git",
