--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vuepress dev docs",
     "build": "vuepress build docs",
+    "postbuild": "node src/scripts/logBuild.js",
     "setup": "node src/scripts/setup.js",
     "cli": "node src/scripts/cli.js",
     "release": "semantic-release",
