--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@asterics/git-tools": "^0.1.7",
     "@asterics/node-utils": "^0.2.0",
+    "@vuepress/plugin-active-header-links": "^1.0.0-alpha.0",
     "@vuepress/plugin-back-to-top": "^1.0.0-alpha.0",
     "@vuepress/plugin-medium-zoom": "^1.0.0-alpha.0",
     "@vuepress/plugin-pwa": "^1.0.0-alpha.0",
@@ -45,6 +46,7 @@
     "yargs": "^12.0.5"
   },
   "dependencies": {
+    "@asterics/web-app-utils": "file:./libs/asterics-web-app-utils-0.0.1-rc11.tgz",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.14"
   }
