--- a/package.json
+++ b/package.json
@@ -32,21 +32,23 @@
   "devDependencies": {
     "@asterics/git-tools": "^0.1.7",
     "@asterics/node-utils": "^0.2.0",
-    "@vuepress/plugin-active-header-links": "^1.0.0-alpha.0",
-    "@vuepress/plugin-back-to-top": "^1.0.0-alpha.0",
-    "@vuepress/plugin-medium-zoom": "^1.0.0-alpha.0",
-    "@vuepress/plugin-pwa": "^1.0.0-alpha.0",
+    "@vuepress/plugin-active-header-links": "^1.0.0-alpha.47",
+    "@vuepress/plugin-back-to-top": "^1.0.0-alpha.47",
+    "@vuepress/plugin-medium-zoom": "^1.0.0-alpha.47",
+    "@vuepress/plugin-pwa": "^1.0.0-alpha.47",
     "convict": "^4.4.1",
     "dotenv": "^6.2.0",
+    "node-sass": "^4.11.0",
     "nodegit": "^0.24.0",
     "rimraf": "^2.6.3",
+    "sass-loader": "^7.1.0",
     "shelljs": "^0.8.3",
     "turndown": "^5.0.3",
-    "vuepress": "^1.0.0-alpha.0",
+    "vuepress": "^1.0.0-alpha.47",
     "yargs": "^12.0.5"
   },
   "dependencies": {
-    "@asterics/web-app-utils": "file:./libs/asterics-web-app-utils-0.0.1-rc11.tgz",
+    "@asterics/web-app-utils": "file:/media/alija/DataNTFS/Git/github/sabicalija/web-app-utils",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.14"
   }
