--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "yargs": "^12.0.5"
   },
   "dependencies": {
-    "@asterics/web-app-utils": "file:/media/alija/DataNTFS/Git/github/sabicalija/web-app-utils",
+    "@asterics/web-app-utils": "^0.0.1-alpha.1",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.14"
   }
