--- a/package.json
+++ b/package.json
@@ -51,7 +51,10 @@
     "yargs": "^12.0.5"
   },
   "dependencies": {
-    "@asterics/web-app-utils": "^0.0.1-alpha.1",
+    "@asterics/web-app-utils": "^0.0.1-alpha.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.14"
   }
