Save state: implement yarn docs convert main functionality

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "vuepress build docs",
     "setup": "node src/scripts/setup.js",
     "cli": "node src/scripts/cli.js",
-    "docs": "babel-node --presets @babel/env src/scripts/docs.js"
+    "docs": "babel-node --presets @babel/env src/scripts/docs.js",
+    "compile": "babel src --out-dir debug --source-maps --watch"
   },
   "repository": {
     "type": "git",
@@ -40,8 +41,10 @@
     "@vuepress/plugin-back-to-top": "^1.0.0-alpha.0",
     "@vuepress/plugin-medium-zoom": "^1.0.0-alpha.0",
     "@vuepress/plugin-pwa": "^1.0.0-alpha.0",
+    "chalk": "^2.4.2",
     "convict": "^4.4.1",
     "dotenv": "^6.2.0",
+    "jsdom": "^14.0.0",
     "nodegit": "^0.24.0",
     "rimraf": "^2.6.3",
     "shelljs": "^0.8.3",
@@ -51,6 +54,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.14"
+    "bootstrap-vue": "^2.0.0-rc.14",
+    "core-js": "3"
   }
 }
