--- a/package.json
+++ b/package.json
@@ -41,6 +41,16 @@
     "@vuepress/plugin-pwa": "^1.0.0-alpha.47",
     "convict": "^4.4.1",
     "dotenv": "^6.2.0",
+    "markdown-it-abbr": "^1.0.4",
+    "markdown-it-checkbox": "^1.1.0",
+    "markdown-it-container": "^2.0.0",
+    "markdown-it-deflist": "^2.0.3",
+    "markdown-it-emoji": "^1.4.0",
+    "markdown-it-footnote": "^3.0.1",
+    "markdown-it-imsize": "^2.0.1",
+    "markdown-it-kbd": "^2.0.0",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
     "node-sass": "^4.11.0",
     "nodegit": "^0.24.0",
     "rimraf": "^2.6.3",
