--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "homepage": "https://github.com/asterics/asterics-docs#readme",
   "devDependencies": {
+    "@asterics/vuepress-theme-docs": "file:./src/vuepress/themes/vuepress-theme-docs",
     "@asterics/git-tools": "^0.1.7",
     "@asterics/node-utils": "^0.2.0",
     "@vuepress/plugin-active-header-links": "^1.0.0-alpha.47",
