Extend theme @vuepress/theme-default

--- a/src/vuepress/themes/vuepress-theme-docs/package.json
+++ b/src/vuepress/themes/vuepress-theme-docs/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@asterics/vuepress-theme-docs",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@vuepress/theme-default": "^1.0.0-alpha.47"
+  }
 }
