--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "yargs": "^12.0.5"
   },
   "dependencies": {
-    "@asterics/web-app-utils": "^0.0.1-alpha.3",
+    "@asterics/web-app-utils": "0.0.1-alpha.6",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/vue-fontawesome": "^0.1.6",
@@ -70,6 +70,7 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.19",
     "bowser": "^2.3.0",
+    "platform": "^1.3.5",
     "vuex": "^3.1.0"
   }
 }
