--- a/src/config/.env
+++ b/src/config/.env
@@ -1,3 +1,12 @@
+#
+# Deployment
+#
 HOST="0.0.0.0"
 PORT=8080
 ENDPOINT=""
+
+#
+# yarn docs
+#
+AUTHOR="dummy <dummy@dummy.com>"
+COMMITTER="dummy <dummy@dummy.com>"
