--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "yargs": "^12.0.5"
   },
   "dependencies": {
+    "ansi-escapes": "^4.1.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.14"
   }
