docs commit: implement resolution ui for untracked files, use npm package table to draw tablular information to terminal

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "ansi-escapes": "^4.1.0",
     "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.14"
+    "bootstrap-vue": "^2.0.0-rc.14",
+    "table": "^5.4.0"
   }
 }
