Update configuration, add new parameters, add configuration in file .env

--- a/src/config/.env
+++ b/src/config/.env
@@ -8,5 +8,5 @@ ENDPOINT=""
 #
 # yarn docs
 #
-AUTHOR="dummy <dummy@dummy.com>"
-COMMITTER="dummy <dummy@dummy.com>"
+AUTHOR="Alija Sabic <sabic.alija@gmail.com>"
+COMMITTER="Alija Sabic <sabic.alija@gmail.com>"
