--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "DESTINATION=docs && vuepress dev $DESTINATION",
-    "build": "DESTINATION=docs && vuepress build $DESTINATION",
+    "dev": "vuepress dev docs",
+    "build": "vuepress build docs",
     "setup": "node src/scripts/setup.js",
     "cli": "node src/scripts/cli.js",
     "docs": "babel-node --config-file ./babel.config.js src/scripts/docs.js",
