--- a/package.json
+++ b/package.json
@@ -45,10 +45,10 @@
     "turndown": "^5.0.3",
     "yargs": "^12.0.5",
     "@asterics/vuepress-theme-docs": "file:./src/vuepress/themes/vuepress-theme-docs",
-    "@vuepress/plugin-active-header-links": "^1.0.0-alpha.47",
-    "@vuepress/plugin-back-to-top": "^1.0.0-alpha.47",
-    "@vuepress/plugin-medium-zoom": "^1.0.0-alpha.47",
-    "@vuepress/plugin-pwa": "^1.0.0-alpha.47",
+    "@vuepress/plugin-active-header-links": "^1.0.2",
+    "@vuepress/plugin-back-to-top": "^1.0.2",
+    "@vuepress/plugin-medium-zoom": "^1.0.2",
+    "@vuepress/plugin-pwa": "^1.0.2",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-checkbox": "^1.1.0",
     "markdown-it-container": "^2.0.0",
@@ -61,7 +61,7 @@
     "markdown-it-sup": "^1.0.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
-    "vuepress": "^1.0.0-alpha.47"
+    "vuepress": "^1.0.2"
   },
   "dependencies": {
     "ansi-escapes": "^4.1.0",
