--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "yarn": "^1.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "[ -z \"${DOCUMENTATION}\" ] && DOCUMENTATION=docs; vuepress dev $DOCUMENTATION",
     "build": "[ -z \"${DOCUMENTATION}\" ] && DOCUMENTATION=docs; vuepress build $DOCUMENTATION",
     "postbuild": "node src/scripts/logBuild.js",
@@ -31,50 +30,27 @@
   },
   "homepage": "https://github.com/asterics/asterics-docs#readme",
   "devDependencies": {
+    "@asterics-docs/vuepress-theme-docs": "canary",
     "@asterics/git-tools": "^0.1.7",
     "@asterics/node-utils": "^0.2.0",
+    "@asterics/web-app-utils": "0.0.1-alpha.6",
     "@babel/core": "^7.4.3",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.3",
+    "@vuepress/plugin-pwa": "^1.1.0",
+    "ansi-escapes": "^4.1.0",
+    "bowser": "^2.3.0",
     "chalk": "^2.4.2",
     "convict": "^4.4.1",
     "dotenv": "^6.2.0",
     "nodegit": "^0.24.0",
     "rimraf": "^2.6.3",
     "shelljs": "^0.8.3",
-    "turndown": "^5.0.3",
-    "yargs": "^12.0.5",
-    "@asterics/vuepress-theme-docs": "file:./src/vuepress/themes/vuepress-theme-docs",
-    "@vuepress/plugin-active-header-links": "^1.0.2",
-    "@vuepress/plugin-back-to-top": "^1.0.2",
-    "@vuepress/plugin-medium-zoom": "^1.0.2",
-    "@vuepress/plugin-pwa": "^1.0.2",
-    "markdown-it-abbr": "^1.0.4",
-    "markdown-it-checkbox": "^1.1.0",
-    "markdown-it-container": "^2.0.0",
-    "markdown-it-deflist": "^2.0.3",
-    "markdown-it-emoji": "^1.4.0",
-    "markdown-it-footnote": "^3.0.1",
-    "markdown-it-imsize": "^2.0.1",
-    "markdown-it-kbd": "^2.0.0",
-    "markdown-it-sub": "^1.0.0",
-    "markdown-it-sup": "^1.0.0",
-    "node-sass": "^4.11.0",
-    "sass-loader": "^7.1.0",
-    "vuepress": "^1.0.2"
-  },
-  "dependencies": {
-    "ansi-escapes": "^4.1.0",
     "table": "^5.4.0",
-    "@asterics/web-app-utils": "0.0.1-alpha.6",
-    "@fortawesome/fontawesome-svg-core": "^1.2.17",
-    "@fortawesome/free-brands-svg-icons": "^5.9.0",
-    "@fortawesome/free-solid-svg-icons": "^5.8.1",
-    "@fortawesome/vue-fontawesome": "^0.1.6",
-    "animate.css": "^3.7.0",
-    "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.19",
-    "bowser": "^2.3.0",
-    "vuex": "^3.1.0"
-  }
+    "turndown": "^5.0.3",
+    "vuepress": "^1.1.0",
+    "vuex": "^3.1.0",
+    "yargs": "^12.0.5"
+  },
+  "dependencies": {}
 }
