--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "yarn": "^1.0.0"
   },
   "scripts": {
-    "dev": "[ -z \"${DOCUMENTATION}\" ] && DOCUMENTATION=docs; vuepress dev $DOCUMENTATION",
+    "dev": "[ -z \"${DOCUMENTATION}\" ] && DOCUMENTATION=docs; vuepress dev --no-clear-screen $DOCUMENTATION",
     "build": "[ -z \"${DOCUMENTATION}\" ] && DOCUMENTATION=docs; vuepress build $DOCUMENTATION",
     "postbuild": "node src/scripts/logBuild.js",
     "docs": "babel-node --config-file ./babel.config.js src/scripts/docs.js",
@@ -48,8 +48,7 @@
     "shelljs": "^0.8.3",
     "table": "^5.4.0",
     "turndown": "^5.0.3",
-    "vuepress": "^1.1.0",
-    "vuex": "^3.1.0",
+    "vuepress": "^1.3.1",
     "yargs": "^12.0.5"
   },
   "dependencies": {}
