--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "[ -z \"${DOCUMENTATION}\" ] && DOCUMENTATION=docs; vuepress dev --no-clear-screen $DOCUMENTATION",
     "build": "[ -z \"${DOCUMENTATION}\" ] && DOCUMENTATION=docs; vuepress build $DOCUMENTATION",
     "postbuild": "node src/scripts/logBuild.js",
-    "docs": "babel-node --config-file ./babel.config.js src/scripts/docs.js",
+    "docs": "asterics-docs",
     "compile": "babel src/scripts --out-dir debug --source-maps --watch"
   },
   "repository": {
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/asterics/asterics-docs#readme",
   "devDependencies": {
+    "@asterics-docs/tool": "canary",
     "@asterics-docs/vuepress-theme-docs": "canary",
     "@asterics/git-tools": "^0.1.7",
     "@asterics/node-utils": "^0.2.0",
