--- a/package.json
+++ b/package.json
@@ -32,25 +32,9 @@
   "devDependencies": {
     "@asterics-docs/tool": "canary",
     "@asterics-docs/vuepress-theme-docs": "canary",
-    "@asterics/git-tools": "^0.1.7",
-    "@asterics/node-utils": "^0.2.0",
     "@asterics/web-app-utils": "0.0.1-alpha.6",
-    "@babel/core": "^7.4.3",
-    "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.4.3",
     "@vuepress/plugin-pwa": "^1.1.0",
-    "ansi-escapes": "^4.1.0",
-    "bowser": "^2.3.0",
-    "chalk": "^2.4.2",
-    "convict": "^4.4.1",
-    "dotenv": "^6.2.0",
-    "nodegit": "^0.24.0",
-    "rimraf": "^2.6.3",
-    "shelljs": "^0.8.3",
-    "table": "^5.4.0",
-    "turndown": "^5.0.3",
-    "vuepress": "^1.3.1",
-    "yargs": "^12.0.5"
+    "vuepress": "^1.3.1"
   },
   "dependencies": {}
 }
