--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "yarn": "^1.0.0"
   },
   "scripts": {
-    "dev": "[ -z \"${DOCUMENTATION}\" ] && DOCUMENTATION=docs; vuepress dev --no-clear-screen $DOCUMENTATION",
-    "build": "[ -z \"${DOCUMENTATION}\" ] && DOCUMENTATION=docs; vuepress build $DOCUMENTATION",
+    "dev": "vuepress dev --no-clear-screen --no-cache docs",
+    "build": "vuepress build docs",
     "postbuild": "node src/scripts/logBuild.js",
-    "docs": "asterics-docs",
-    "compile": "babel src/scripts --out-dir debug --source-maps --watch"
+    "docs": "asterics-docs"
   },
   "repository": {
     "type": "git",
@@ -31,10 +30,12 @@
   "homepage": "https://github.com/asterics/asterics-docs#readme",
   "devDependencies": {
     "@asterics-docs/tool": "canary",
-    "@asterics-docs/vuepress-theme-docs": "canary",
     "@asterics/web-app-utils": "0.0.1-alpha.6",
     "@vuepress/plugin-pwa": "^1.1.0",
-    "vuepress": "^1.3.1"
+    "vuepress": "^1.4.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "bowser": "^2.9.0",
+    "@asterics-docs/vuepress-theme-docs": "canary"
+  }
 }
