--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "AsTeRICS Help and Docs",
   "engines": {
-    "node": "^10.0.0",
     "yarn": "^1.0.0"
   },
   "scripts": {
@@ -30,10 +29,13 @@
   "homepage": "https://github.com/asterics/asterics-docs#readme",
   "devDependencies": {
     "@asterics-docs/tool": "canary",
-    "@vuepress/plugin-pwa": "^1.4.1",
-    "vuepress": "^1.4.1"
+    "@vuepress/plugin-pwa": "^1.5.0",
+    "vuepress": "^1.5.0"
   },
   "dependencies": {
-    "@asterics-docs/vuepress-theme-docs": "canary"
+    "@asterics-docs/vuepress-theme-docs": "^0.0.1-beta.49"
+  },
+  "resolutions": {
+    "watchpack": "1.6.1"
   }
 }
