--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
   },
   "homepage": "https://github.com/asterics/asterics-docs#readme",
   "devDependencies": {
-    "@asterics-docs/tool": "canary",
+    "@asterics-docs/tool": "0.0.1",
     "@vuepress/plugin-pwa": "^1.5.0",
     "vuepress": "^1.5.0"
   },
   "dependencies": {
-    "@asterics-docs/vuepress-theme-docs": "0.0.1-beta.54"
+    "@asterics-docs/vuepress-theme-docs": "0.0.1"
   },
   "resolutions": {
     "watchpack": "1.6.1"
