--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Install pnpm
         run: npm -g i pnpm
+      - name: Install NodeGit Build Dependencies
+        run: sudo apt install libkrb5-dev
       - name: Install Dependencies
         run: pnpm install
       - name: Initialize asterics-docs
