--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -9,18 +9,23 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Get Code
+        uses: actions/checkout@v3
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 7.25.1
       - name: Install Node
         uses: actions/setup-node@v3
         with:
           node-version: 14
-      - name: Get Code
-        uses: actions/checkout@v3
-      - name: Install pnpm
-        run: npm -g i pnpm
+          cache: "pnpm"
+      # - name: Install pnpm
+      #   run: npm -g i pnpm
       - name: Install NodeGit Build Dependencies
         run: sudo apt install libkrb5-dev
       - name: Install Dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
       - name: Initialize asterics-docs
         run: pnpm run docs init --no-reference
       - name: Setup docs
