--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "dev": "vuepress dev docs",
-    "build": "NODE_OPTIONS=\"--max-old-space-size=12288\" vuepress build docs",
+    "build": "vuepress build docs",
     "postbuild": "node src/scripts/logBuild.js",
     "docs": "asterics-docs"
   },
