--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,22 +9,29 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Get Code
+        uses: actions/checkout@v3
+      - name: Install NodeGit Build Dependencies
+        run: sudo apt install libkrb5-dev
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 7.25.1
       - name: Install Node
         uses: actions/setup-node@v3
         with:
-          node-version: 12
-      - name: Get Code
-        uses: actions/checkout@v3
-      - name: Install yarn
-        run: npm -g i yarn
+          node-version: 14
+          cache: pnpm
       - name: Install Dependencies
-        run: yarn
+        run: pnpm install --frozen-lockfile
       - name: Initialize asterics-docs
-        run: yarn docs init --no-reference
+        run: pnpm run docs init init --no-reference
       - name: Setup docs
-        run: yarn docs setup
+        run: pnpm run docs setup
       - name: Build
-        run: yarn build
+        env:
+          NODE_OPTIONS: "--max-old-space-size=12288"
+        run: pnpm run build
       - name: Get Code (gh-pages)
         uses: actions/checkout@v3
         with:
