--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,3 +51,17 @@ jobs:
           git --git-dir=gh-pages/.git --work-tree=gh-pages/ add .
           git --git-dir=gh-pages/.git --work-tree=gh-pages/ commit -m "docs: release"
           git --git-dir=gh-pages/.git --work-tree=gh-pages/ push
+  # We don't know when the site will be deployed, we just wait a few seconds
+  # Better solutions can be found
+  delay:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Delay for 120 seconds
+        run: sleep 120s
+  index:
+    needs: [build, delay]
+    uses: ./.github/workflows/algolia.yml
+    with:
+      delete_index: true
+    secrets: inherit
