--- a/.github/workflows/algolia.yml
+++ b/.github/workflows/algolia.yml
@@ -15,33 +15,36 @@ on:
         type: boolean
         default: true
 jobs:
-  crawl:
+  delete:
     runs-on: ubuntu-latest
+    if: ${{ inputs.delete_index == true }}
     steps:
       - name: Get Code
         uses: actions/checkout@v3
       - name: Install pnpm
-        if: ${{ inputs.delete_index == true }}
         uses: pnpm/action-setup@v2
         with:
           version: 7.25.1
       - name: Install Node
-        if: ${{ inputs.delete_index == true }}
         uses: actions/setup-node@v3
         with:
           node-version: 14
           cache: pnpm
       - name: Install algoliasearch
-        if: ${{ inputs.delete_index == true }}
         run: |
           pnpm add algoliasearch
           pnpm install
       - name: Delete Index
-        if: ${{ inputs.delete_index == true }}
         env:
           APPLICATION_ID: ${{ secrets.APPLICATION_ID }}
           API_KEY: ${{ secrets.API_KEY }}
         run: node ./src/scripts/algolia/delete.js
+  crawl:
+    runs-on: ubuntu-latest
+    needs: delete
+    steps:
+      - name: Get Code
+        uses: actions/checkout@v3
       - name: Crawl Website
         uses: darrenjennings/algolia-docsearch-action@master
         with:
