--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,35 +32,48 @@ jobs:
         env:
           NODE_OPTIONS: "--max-old-space-size=12288"
         run: pnpm run build
+      - name: Upload Build Result
+        uses: actions/upload-artifact@v3
+        with:
+          name: asterics-docs
+          path: dist
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Download Build Result
+        uses: actions/download-artifact@v3
+        with:
+          name: asterics-docs
+          path: asterics-docs
       - name: Get Code (gh-pages)
         uses: actions/checkout@v3
         with:
           ref: "gh-pages"
           path: "gh-pages"
-      - name: Set User
+      - name: Merge Builds
         run: |
           git config --global user.name "${{ github.actor }}"
           git config --global user.email ""
-      - name: Deploy
-        run: |
           mv gh-pages/next next
           rm -rf gh-pages/*
-          cp -r dist/* gh-pages/
+          cp -r asterics-docs/* gh-pages/
           mv next gh-pages/next
           echo "www.asterics.eu" > gh-pages/CNAME
           git --git-dir=gh-pages/.git --work-tree=gh-pages/ add .
           git --git-dir=gh-pages/.git --work-tree=gh-pages/ commit -m "docs: release"
-          git --git-dir=gh-pages/.git --work-tree=gh-pages/ push
+      - name: Upload to GitHub
+        run: git --git-dir=gh-pages/.git --work-tree=gh-pages/ push
   # We don't know when the site will be deployed, we just wait a few seconds
   # Better solutions can be found
   delay:
-    needs: build
+    needs: deploy
     runs-on: ubuntu-latest
     steps:
       - name: Delay for 120 seconds
         run: sleep 120s
   index:
-    needs: [build, delay]
+    needs: [deploy, delay]
     uses: ./.github/workflows/algolia.yml
     with:
       delete_index: true
