--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Get Code
         uses: actions/checkout@v3
+      - name: Update package archive
+        run: sudo apt-get update
       - name: Install NodeGit Build Dependencies
         run: sudo apt install libkrb5-dev
       - name: Install pnpm
