--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: 14
           cache: pnpm
       - name: Install Dependencies
-        run: pnpm install
+        run: pnpm install --no-frozen-lockfile
       - name: Initialize asterics-docs
         run: pnpm run docs init --no-reference
       - name: Setup docs
