fixed version of algoliasearch to 4.24.0 as the API change breaks the algolia build

--- a/.github/workflows/algolia.yml
+++ b/.github/workflows/algolia.yml
@@ -32,7 +32,7 @@ jobs:
           cache: pnpm
       - name: Install algoliasearch
         run: |
-          pnpm add algoliasearch
+          pnpm add algoliasearch@4.24.0
           pnpm install
       - name: Delete Index
         env:
